--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx ts-node src/index.ts"
+    "test": "node src/index.ts"
   },
-  "keywords": ["newman","example"],
+  "keywords": [
+    "newman",
+    "example"
+  ],
   "author": "Sang Nguyen",
   "license": "ISC",
   "dependencies": {
-    "newman": "^5.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "newman": "^5.2.0"
   },
   "devDependencies": {
-    "@types/newman": "^5.1.1",
     "newman-reporter-htmlextra": "^1.19.4"
   }
 }
